Mapprio/main/default/objects/MapprioSmartSurveyTarget__c/MapprioSmartSurveyTarget__c.object-meta.xml
<CustomObject>
    <label>Mapprio Smart Survey Target</label>
    <nameField>
        <label>Mapprio Smart Survey Target ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mapprio Smart Survey Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>