Mapprio/main/default/objects/MapprioSmartSurveyTarget__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Mapprio Smart Survey Targets</relationshipLabel>
    <relationshipName>Mapprio_Smart_Survey_Targets</relationshipName>
    <type>Lookup</type>
</CustomField>