Mapprio/main/default/objects/MapprioSmartSurveyTarget__c/fields/MapprioId__c.field-meta.xml
<CustomField>
    <fullName>MapprioId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Mapprio ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>