Mapprio/main/default/objects/MapprioSmartSurveyTarget__c/fields/MapprioSurvey__c.field-meta.xml
<CustomField>
    <fullName>MapprioSurvey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MapprioSurvey</label>
    <referenceTo>MapprioSmartSurvey__c</referenceTo>
    <relationshipLabel>Mapprio Smart Survey Targets</relationshipLabel>
    <relationshipName>MapprioSmartSurveyTargets1</relationshipName>
    <type>Lookup</type>
</CustomField>