Mapprio/main/default/objects/MapprioSmartSurveyTarget__c/fields/SmartSurveyUrl__c.field-meta.xml
<CustomField>
    <fullName>SmartSurveyUrl__c</fullName>
    <label>Smart Survey URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>